[package]
name = "dip721_nft_container"
version = "0.1.0"
edition = "2018"

[dependencies]
ic-cdk = "0.13.1"
ic-cdk-macros = "0.9.0"
candid = "0.10.5"

include-base64 = "0.1"
serde = { version = "1", features = ["derive"] }
percent-encoding = "2.1"
ic-certified-map = "0.4.0"
sha2 = "0.10.2"
serde_cbor = "0.11.2"
base64 = "0.22.0"

[lib]
crate-type = ["cdylib"]
